fixed swagger page authentication issue